# OBS-Scene-to-Overlay-Exporter

./: .gitignore  Cargo.toml  README-PTBR.md  README.md
src/: Cargo.toml  app.rs  assets.rs  generator.rs  main.rs  parser.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: generator.rs  lib.rs  main.rs  parser.rs
src/src/: app.rs  assets.rs  generator.rs  parser.rs  utils.rs
