[package]
name = "obs-overlay-exporter"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri   = { version = "2", features = [] }
serde   = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio   = { version = "1", features = ["full"] }

[profile.release]
opt-level  = "z"
lto        = true
strip      = true
panic      = "abort"
