[package]
name = "obs-overlay-exporter"
version = "0.7.0"
edition = "2021"

[dependencies]
eframe     = "0.31"
rfd        = "0.15"
serde_json = "1"
reqwest    = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio      = { version = "1", features = ["full"] }

[profile.release]
opt-level = "z"
lto       = true
strip     = true
panic     = "abort"
